--- a/appview/pages/templates/repo/fragments/interdiff.html
+++ b/appview/pages/templates/repo/fragments/interdiff.html
@@ -6,7 +6,7 @@
   <section class="mt-6 p-6 border border-gray-200 dark:border-gray-700 w-full mx-auto rounded bg-white dark:bg-gray-800 drop-shadow-sm">
     <div class="diff-stat">
       <div class="flex gap-2 items-center">
-        <strong class="text-sm uppercase dark:text-gray-200">affected files</strong>
+        <strong class="text-sm uppercase dark:text-gray-200">files</strong>
       </div>
       <div class="overflow-x-auto">
         <ul class="dark:text-gray-200">
