--- a/appview/pages/templates/repo/log.html
+++ b/appview/pages/templates/repo/log.html
@@ -1,157 +1,66 @@
 {{ define "title" }}commits &middot; {{ .RepoInfo.FullName }}{{ end }}
-
 {{ define "repoContent" }}
-    <section id="commit-message">
-        {{ $commit := index .Commits 0 }}
-        {{ $messageParts := splitN $commit.Message "\n\n" 2 }}
-        <div>
-          <a href="/{{ $.RepoInfo.FullName }}/commit/{{ $commit.Hash.String }}" class="dark:text-white">
-            <p class="pb-5">{{ index $messageParts 0 }}</p>
-            {{ if gt (len $messageParts) 1 }}
-              <p class="mt-1 text-sm cursor-text pb-5">
-              {{ nl2br (unwrapText (index $messageParts 1)) }}
-              </p>
-            {{ end }}
-          </a>
-        </div>
-
-        <div class="text-sm text-gray-500 dark:text-gray-400">
-            <span class="font-mono">
-                <a
-                    href="/{{ $.RepoInfo.FullName }}/commit/{{ $commit.Hash.String }}"
-                    class="text-gray-500 dark:text-gray-400 no-underline hover:underline"
-                    >{{ slice $commit.Hash.String }}</a
-                >
-            </span>
-            <span class="mx-2 before:content-['·'] before:select-none"></span>
-            <span>
-                {{ $didOrHandle := index $.EmailToDidOrHandle $commit.Author.Email }}
-                {{ if $didOrHandle }}
-                <a
-                    href="/{{ $didOrHandle }}"
-                    class="text-gray-500 dark:text-gray-400 no-underline hover:underline"
-                    >{{ $didOrHandle }}</a
-                >
-                {{ else }}
-                <a
-                    href="mailto:{{ $commit.Author.Email }}"
-                    class="text-gray-500 dark:text-gray-400 no-underline hover:underline"
-                    >{{ $commit.Author.Name }}</a
-                >
-                {{ end }}
-            </span>
-            <div
-                class="inline-block px-1 select-none after:content-['·']"
-            ></div>
-            <span>{{ timeFmt $commit.Author.When }}</span>
-        </div>
-    </section>
-{{ end }}
-
-{{ define "repoAfter" }}
-    <main>
-        <div id="commit-log" class="flex-1 relative">
-            <div class="absolute left-8 top-0 bottom-0 w-px bg-gray-300 dark:bg-gray-600"></div>
-            {{ $end := length .Commits }}
-            {{ $commits := subslice .Commits 1 $end }}
-            {{ range $commits }}
-                <div class="flex flex-row justify-between items-center">
-                    <div
-                        class="relative w-full px-4 py-4 mt-4 rounded-sm bg-white dark:bg-gray-800"
-                    >
-                        <div id="commit-message">
-                            {{ $messageParts := splitN .Message "\n\n" 2 }}
-                            <div class="text-base cursor-pointer">
-                                <div>
-                                    <div>
-                                        <a
-                                            href="/{{ $.RepoInfo.FullName }}/commit/{{ .Hash.String }}"
-                                            class="inline no-underline hover:underline dark:text-white"
-                                            >{{ index $messageParts 0 }}</a
-                                        >
-                                        {{ if gt (len $messageParts) 1 }}
-
-                                            <button
-                                                class="py-1/2 px-1 bg-gray-200 hover:bg-gray-400 dark:bg-gray-700 dark:hover:bg-gray-600 rounded"
-                                                hx-on:click="this.parentElement.nextElementSibling.classList.toggle('hidden')"
-                                            >
-                                            {{ i "ellipsis" "w-3 h-3" }}
-                                            </button>
-                                        {{ end }}
-                                    </div>
-                                    {{ if gt (len $messageParts) 1 }}
-                                        <p
-                                            class="hidden mt-1 text-sm cursor-text pb-2 dark:text-gray-300"
-                                        >
-                                            {{ nl2br (index $messageParts 1) }}
-                                        </p>
-                                    {{ end }}
-                                </div>
-                            </div>
+<section id="commit-table">
+    <table class="w-full border-collapse">
+        <thead class="bg-gray-100 dark:bg-gray-700">
+            <tr>
+                <th class="px-4 py-2 text-sm text-left text-gray-700 dark:text-gray-300 uppercase font-bold">Author</th>
+                <th class="px-4 py-2 text-sm text-left text-gray-700 dark:text-gray-300 uppercase font-bold">Commit</th>
+                <th class="px-4 py-2 text-sm text-left text-gray-700 dark:text-gray-300 uppercase font-bold">Message</th>
+                <th class="px-4 py-2 text-sm text-left text-gray-700 dark:text-gray-300 uppercase font-bold">Date</th>
+            </tr>
+        </thead>
+        <tbody>
+            {{ range $index, $commit := .Commits }}
+                {{ $messageParts := splitN $commit.Message "\n\n" 2 }}
+                <tr class="border-b border-gray-200 dark:border-gray-700">
+                    <td class="px-4 py-3 align-top">
+                        {{ $didOrHandle := index $.EmailToDidOrHandle $commit.Author.Email }}
+                        {{ if $didOrHandle }}
+                            <a href="/{{ $didOrHandle }}" class="text-gray-700 dark:text-gray-300 no-underline hover:underline">{{ $didOrHandle }}</a>
+                        {{ else }}
+                            <a href="mailto:{{ $commit.Author.Email }}" class="text-gray-700 dark:text-gray-300 no-underline hover:underline">{{ $commit.Author.Name }}</a>
+                        {{ end }}
+                    </td>
+                    <td class="px-4 py-3 align-top font-mono flex items-end">
+                        <a href="/{{ $.RepoInfo.FullName }}/commit/{{ $commit.Hash.String }}" class="text-gray-700 dark:text-gray-300 no-underline hover:underline">{{ slice $commit.Hash.String 0 8 }}</a>
+                        <div class="inline-flex">
+                            <button class="p-1 mx-1 hover:bg-gray-100 dark:hover:bg-gray-700 rounded" 
+                                title="Copy SHA"
+                                onclick="navigator.clipboard.writeText('{{ $commit.Hash.String }}'); this.innerHTML=`{{ i "copy-check" "w-4 h-4" }}`; setTimeout(() => this.innerHTML=`{{ i "copy" "w-4 h-4" }}`, 1500)">
+                                    {{ i "copy" "w-4 h-4" }}
+                            </button>
+                            <a href="/{{ $.RepoInfo.FullName }}/tree/{{ $commit.Hash.String }}" class="p-1 mx-1 hover:bg-gray-100 dark:hover:bg-gray-700 rounded" title="Browse repository at this commit">
+                                {{ i "folder-code" "w-4 h-4" }}
+                            </a>
                         </div>
-
-                        <div class="text-sm text-gray-500 dark:text-gray-400 mt-3">
-                            <span class="font-mono">
-                                <a
-                                    href="/{{ $.RepoInfo.FullName }}/commit/{{ .Hash.String }}"
-                                    class="text-gray-500 dark:text-gray-400 no-underline hover:underline"
-                                    >{{ slice .Hash.String 0 8 }}</a
-                                >
-                            </span>
-                            <span
-                                class="mx-2 before:content-['·'] before:select-none"
-                            ></span>
-                            <span>
-                                {{ $didOrHandle := index $.EmailToDidOrHandle .Author.Email }}
-                                {{ if $didOrHandle }}
-                                <a
-                                    href="/{{ $didOrHandle }}"
-                                    class="text-gray-500 dark:text-gray-400 no-underline hover:underline"
-                                    >{{ $didOrHandle }}</a
-                                >
-                                {{ else }}
-                                <a
-                                    href="mailto:{{ .Author.Email }}"
-                                    class="text-gray-500 dark:text-gray-400 no-underline hover:underline"
-                                    >{{ .Author.Name }}</a
-                                >
+                    </td>
+                    <td class="px-4 py-3 align-top">
+                        {{ if eq $index 0 }}
+                            <a href="/{{ $.RepoInfo.FullName }}/commit/{{ $commit.Hash.String }}" class="dark:text-white no-underline hover:underline">
+                                <p>{{ index $messageParts 0 }}</p>
+                                {{ if gt (len $messageParts) 1 }}<p class="mt-1 text-sm text-gray-600 dark:text-gray-400">{{ nl2br (unwrapText (index $messageParts 1)) }}</p>{{ end }}
+                            </a>
+                        {{ else }}
+                            <div>
+                                <a href="/{{ $.RepoInfo.FullName }}/commit/{{ $commit.Hash.String }}" class="dark:text-white no-underline hover:underline">{{ index $messageParts 0 }}</a>
+                                {{ if gt (len $messageParts) 1 }} 
+                                <button class="ml-2 py-1/2 px-1 bg-gray-200 hover:bg-gray-400 dark:bg-gray-700 dark:hover:bg-gray-600 rounded" hx-on:click="this.nextElementSibling.classList.toggle('hidden')">{{ i "ellipsis" "w-3 h-3" }}</button>
+                                <p class="hidden mt-1 text-sm text-gray-600 dark:text-gray-400">{{ nl2br (index $messageParts 1) }}</p>
                                 {{ end }}
-                            </span>
-                            <div
-                                class="inline-block px-1 select-none after:content-['·']"
-                            ></div>
-                            <span>{{ timeFmt .Author.When }}</span>
-                        </div>
-                    </div>
-                </div>
+                            </div>
+                        {{ end }}
+                    </td>
+                    <td class="px-4 py-3 align-top text-gray-500 dark:text-gray-400">{{ timeFmt $commit.Author.When }}</td>
+                </tr>
             {{ end }}
-        </div>
+        </tbody>
+    </table>
+</section>
 
-        {{ $commits_len := len .Commits }}
-        <div class="flex justify-end mt-4 gap-2">
-            {{ if gt .Page 1 }}
-                <a
-                    class="btn flex items-center gap-2 no-underline hover:no-underline dark:text-white dark:hover:bg-gray-700"
-                    hx-boost="true"
-                    onclick="window.location.href = window.location.pathname + '?page={{ sub .Page 1 }}'"
-                >
-                    {{ i "chevron-left" "w-4 h-4" }}
-                    previous
-                </a>
-            {{ else }}
-                <div></div>
-            {{ end }}
-
-            {{ if eq $commits_len 30 }}
-                <a
-                    class="btn flex items-center gap-2 no-underline hover:no-underline dark:text-white dark:hover:bg-gray-700"
-                    hx-boost="true"
-                    onclick="window.location.href = window.location.pathname + '?page={{ add .Page 1 }}'"
-                >
-                    next
-                    {{ i "chevron-right" "w-4 h-4" }}
-                </a>
-            {{ end }}
-        </div>
-    </main>
+    {{ $commits_len := len .Commits }}
+    <div class="flex justify-end mt-4 gap-2">
+        {{ if gt .Page 1 }}<a class="btn flex items-center gap-2 no-underline hover:no-underline dark:text-white dark:hover:bg-gray-700" hx-boost="true" onclick="window.location.href = window.location.pathname + '?page={{ sub .Page 1 }}'">{{ i "chevron-left" "w-4 h-4" }} previous</a>{{ else }}<div></div>{{ end }}
+        {{ if eq $commits_len 60 }}<a class="btn flex items-center gap-2 no-underline hover:no-underline dark:text-white dark:hover:bg-gray-700" hx-boost="true" onclick="window.location.href = window.location.pathname + '?page={{ add .Page 1 }}'">next {{ i "chevron-right" "w-4 h-4" }}</a>{{ end }}
+    </div>
 {{ end }}
